[package]
name = "wasm-bindgen-minimal-example"
version = "0.1.0"
authors = ["github.com/anderejd"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.42"

[dependencies.web-sys]
version = "0.3.19"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
